# civic_tech_appropriations_bills

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HR6938-appropriations-tables-research.md  README.md  bill_tree.py  conftest.py  diff_bill.py  diff_pdf.py  fetch_bills.py  methodology.md  parse_bill.py  pdf_test_cases.py  pyproject.toml  render_examples.py  smoke_test_matching.py  test_bill_tree.py  test_classifier.py  test_corpus_properties.py  test_diff_agreement_metrics.py  test_diff_bill.py  test_diff_pdf.py  test_diff_validation.py  test_fetch_bills.py  test_financial_diff.py  test_format_html.py  test_formatters_adapters_pdf.py  test_formatters_adapters_xml.py  test_formatters_canonical.py  test_formatters_diff_html_card.py  test_formatters_diff_html_sidebar_callout.py  test_formatters_diff_html_skeleton.py  test_formatters_diff_html_summary_table.py  test_formatters_text.py  test_formatters_text_serializer.py  test_formatters_view_model.py  test_parity_metrics.py  (+14 more)
.github/: pull_request_template.md
examples/: README.md  hr4366_committee_vs_floor.html  hr4366_house_vs_senate.html  hr8752_pdf_diff.html  hr8752_xml_diff.html  index.html  pdf-diff-phase2-mock.html
formatters/: _text.py  adapters.py  canonical.py  diff_html.py  html.py  pdf_html.py  text_serializer.py  view_model.py
parsers/: __init__.py  classifier.py  diff_agreement_metrics.py  parity_metrics.py  pdf_anchors.py  pdf_parser.py  pdf_text.py  synthetic_xml.py  xml_parser.py
plans/: parser-gaps.md  section-renumbering.md
prototype/: README.md  styles.css  (+1 more)
(+15 files in other folders)
