[project]
name = "bill-diff"
version = "0.1.0"
description = "Download U.S. bill text from Congress.gov and compare versions structurally"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.22",
]

[tool.pytest.ini_options]
testpaths = ["."]
markers = [
    "slow: tests that require real bill XML files (deselect with '-m not slow')",
]
